# tempo

./: .gitignore  .ocamlformat  .ocamlformat-ignore  CAHIER_DE_LABORATOIRE.md  OBJECTIF_METHODOLOGIE.md  README.md  RELEASE_NOTES.md  TODO  Tempo.md  Tempo_EN.md  dune-project  guideline.md  optimisation.md  optimisation_steps.md  tempo-app.opam  tempo-async.opam  tempo-fluidsynth.opam  tempo-frp.opam  tempo-jobs.opam  tempo-raylib.opam  tempo-score.opam  tempo.opam  tempo_conformance_report.md
.github/workflows/: ci.yml  docs.yml
applications/: ARCHITECTURE.md  CONTRIBUTING.md  README_TEMPLATE.md  RELEASE_CHECKLIST.md  SMOKE_MATRIX.md  run
applications/advanced/game-univ/: MANUEL_DE_JEU.md  README.md  cheat_detector_game.opam  run
applications/advanced/music_score_player/: EXPLICATIONS_MUSIC_PLAYER.md  README.md  run
applications/advanced/refactor/: README.md  dune-project  run
applications/advanced/tempo-core-studio/: README.md  dune-project  run
applications/game/game-univ/: MANUEL_DE_JEU.md  README.md  run
applications/game/snake-raylib/: run
applications/games/: run
applications/games/boids-raylib/: README.md
applications/games/ca-continuous-raylib/: README.md
applications/games/game-univ/: run
applications/games/snake-raylib/: README.md
applications/games/solar-system-raylib/: README.md  run
applications/logic/logicgroove/: README.md  run
applications/logic/temporalsim/: README.md  run
applications/reconfiguration/: run
bench/: README_CORE_BENCH.md  basic_bench.ml  core_bench.ml  dune
bench/results/core/: REPORT.md  (+1 more)
benchmarks_ppdp/: README.md  config.env.example  policy.env
benchmarks_ppdp/scripts/: analyze_tempo_diag.py  common.sh  compare_rml_toolchains.py  compare_tempo_versions.py  plot_reference.py  plot_reference_memory.py  rebuild_reference_outputs.sh  run_all.sh  run_locked_comparison.sh  run_rml.sh  run_rml_ocaml5.sh  run_tempo.sh  run_tempo_diag.sh  summarize_reference.py
book_examples_harness/: await_immediate_example.ml  dune  emit_await_example.ml  execute_trace_example.ml  generate_book_traces.ml  run_book_examples.ml  when_watch_parallel_example.ml
doc/process/: CAHIER_DE_LABORATOIRE_2026-03-05.md  OBJECTIF_METHODOLOGIE_2026-03-05_CI_RELEASE_020.md
doc/tempo/: dune  index.mld  overview.mld  runtime_layers.mld
doc/tempo-app/: dune  index.mld
doc/tempo-fluidsynth/: dune  index.mld
doc/tempo-jobs/: dune  index.mld
doc/tempo-raylib/: dune  index.mld
doc/tempo-score/: dune  index.mld
docs/: COMPATIBILITY_POLICY.md  GAME_QUICKSTART.md  runtime_internals.md  runtime_perf_invariants.md  runtime_source_of_truth.md
examples/: balls_alternate.ml  balls_alternate_graphics.ml  balls_control.ml  balls_control_graphics.ml  boids_graphics.ml  boids_tsdl.ml  ca_continuous_graphics.ml  ca_continuous_tsdl.ml  chamber_orbs_tsdl.ml  cloth_tsdl.ml  dune  fire_smoke_tsdl.ml  mage_arena_tsdl.ml  nbody_tsdl.ml  pendulums_tsdl.ml  snake_tsdl.ml  solar_system.ml  solar_system_graphics.ml  solar_system_tsdl.ml  traffic_tsdl.ml
game-univ/: README.md  dune-project
game-univ/src/: dune
game-univ/src/engine/: raylib_platform.ml
game-univ/src/entities/: student.ml
game-univ/src/systems/: action_feedback.ml
lib/: dune  tempo.ml  tempo.mli  tempo_async.ml  tempo_async.mli  tempo_engine.ml  tempo_engine.mli  tempo_frp.ml  tempo_frp.mli  tempo_game.ml  tempo_game.mli  tempo_game_raylib.ml  tempo_game_raylib.mli  tempo_log.ml  tempo_signal.ml  tempo_signal.mli  tempo_task.ml  tempo_task.mli  tempo_thread.ml  tempo_thread.mli  tempo_types.ml  tempo_types.mli
lib/app/: dune  tempo_app.ml  tempo_app.mli
lib/core/: dune  tempo.ml  tempo.mli  tempo_base.ml  tempo_base.mli  tempo_constructs.ml  tempo_constructs.mli  tempo_core.ml  tempo_core.mli  tempo_core_api.ml  tempo_core_api.mli  tempo_engine.ml  tempo_engine.mli  tempo_log.ml  tempo_low_level.ml  tempo_low_level.mli  tempo_meta.ml  tempo_meta.mli  tempo_observe.ml  tempo_observe.mli  tempo_signal.ml  tempo_signal.mli  tempo_task.ml  tempo_task.mli  tempo_thread.ml  tempo_thread.mli  tempo_types.ml  tempo_types.mli
lib/fluidsynth/: discover.ml  dune  tempo_fluidsynth.ml  tempo_fluidsynth.mli  tempo_fluidsynth_stubs.c
lib/jobs/: dune  tempo_jobs.ml  tempo_jobs.mli
lib/score/: dune  tempo_score.ml  tempo_score.mli
samples/: all_effects_log.ml  awaiters_log.ml  dune  emit_twice.ml  when_emit_parallel.ml
tests/ok/: TEST_TAGS.md  app_api.ml  async_mailbox_api.ml  await_agg_same_instant.ml  await_fixpoint.expected  await_fixpoint.ml  await_immediate_parallel_order.expected  await_immediate_parallel_order.ml  dune  dynamic_api.ml  emit_agg_collect.expected  emit_agg_collect.ml  emit_agg_sum.expected  emit_agg_sum.ml  emit_event_wakes_awaiters.expected  emit_event_wakes_awaiters.ml  emit_once_await_immediate.expected  emit_once_await_immediate.ml  emit_once_await_many.expected  emit_once_await_many.ml  emit_once_await_one.expected  emit_once_await_one.ml  error_bus_api.ml  execute_timeline.ml  frp_api.ml  jobs_api.expected  jobs_api.ml  low_level_with_kill_abort.expected  low_level_with_kill_abort.ml  low_level_with_kill_inherit.expected  low_level_with_kill_inherit.ml  parallel.expected  parallel.ml  parallel_fanout_barrier.expected  parallel_fanout_barrier.ml  pause.expected  pause.ml  present_then_else.expected  present_then_else.ml  runtime_instant_current_empty.ml  (+49 more)
tex/: SECTION_OUTLINE.md  WRITING_GUIDE.md  definitions.tex  notes.md  references.bib  tempo-report.aux  tempo-report.bbl  tempo-report.blg  tempo-report.fdb_latexmk  tempo-report.fls  tempo-report.out  tempo-report.tex
tex/sections/: 00-abstract.tex  01-introduction.tex  02-background-control.tex  04-core-constructs.tex  05-effects-background.tex  06-tempo-overview.tex  07-api.tex  08-usage.tex  09-implementation.tex  10-performance.tex  11-limitations.tex  12-related-work.tex  13-conclusion.tex
tools/bench/: run_core_bench.sh
tools/demo/: compress_mp4.sh  list_avfoundation_devices_macos.sh  run_and_record_macos.sh
tools/release/: build_games_dmg_macos.sh  check_doc_freshness.sh  validate_apps.sh
(+160 files in other folders)
