(tests
 (names
  await_fixpoint
  await_agg_same_instant
  emit_agg_collect
  emit_agg_sum
  emit_event_wakes_awaiters
  app_api
  execute_timeline
  error_bus_api
  frp_api
  emit_once_await_immediate
  emit_once_await_many
  emit_once_await_one
  pause
  watch_nested
  watch_when_complete
  watch_when_killed
  when_await_imm_next_instant
  when_await_imm_same_instant
  when_await_nested
  when_await_next_instant
  when_await_same_instant
  when_complete
  when_nested
  when_next_instant
  when_same_instant
  when_tick_tock
  await_immediate_parallel_order
  sf_api
  timeline_json_api
  runtime_instant_observable_order
  runtime_instant_current_empty
  jobs_api)
 (libraries tempo tempo-frp tempo-jobs))
